Sorry still working on regular commits

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+
+
+* {
+
+  box-sizing: border-box;
+
+
+  --color-primary-dark: #687351;
+  --color-primary: #9ba17f;
+  --color-primary1: #b9d7ea;
+  --color-primary2: #b9d7ea;
+  --color-primary3: #b9d7ea;
+  --color-primary4: #e8e4db;
+
+  padding: 3px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--color-primary4);
+}
+
+/* utility */
+.sectionLabel {
+  width: 100%;
   text-align: center;
+  border-bottom: 1px solid var(--color-primary-dark);
+  line-height: 0em;
+  font-size: 2rem;
+
+}
+.sectionLabel span {
+  background-color: var(--color-primary4);
+  padding: 0 0.5em;
+  color: var(--color-primary-dark);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.inverted {
+  background-color: var(--color-primary-dark);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@viewport {width: device-width;}
