--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
-
-
 * {
 
   box-sizing: border-box;
 
 
-  --color-primary-dark: #687351;
-  --color-primary: #9ba17f;
-  --color-primary1: #b9d7ea;
-  --color-primary2: #b9d7ea;
-  --color-primary3: #b9d7ea;
-  --color-primary4: #e8e4db;
+  --color-primary-dark: #c8222a;
+  --color-primary: #1d3557;
+  --color-primary1: #f1faee;
+  --color-primary2: #a8dadc;
+  --color-primary3: #a8dadc;
+  --color-primary4: white;
 
   padding: 3px;
 }
@@ -25,7 +23,7 @@ body {
 .sectionLabel {
   width: 100%;
   text-align: center;
-  border-bottom: 1px solid var(--color-primary-dark);
+  border-bottom: 1px solid var(--color-primary);
   line-height: 0em;
   font-size: 2rem;
 
@@ -33,11 +31,11 @@ body {
 .sectionLabel span {
   background-color: var(--color-primary4);
   padding: 0 0.5em;
-  color: var(--color-primary-dark);
+  color: var(--color-primary);
 }
 
 .inverted {
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-primary);
   color: white;
 }
 
