--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -10,7 +10,7 @@ nav {
     cursor: pointer;
     margin-right: 10%;
     font-size: 20px;
-    color: var(--color-primary-dark);
+    color: var(--color-primary);
     transition: var(--transition-time);
   }
   
